--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# Core AI & LangChain (v0.2 Standard)
+# Core AI & LangChain (Stable v0.2 Build)
 langchain==0.2.17
 langchain-community==0.2.19
 langchain-core==0.2.43
@@ -13,11 +13,11 @@ chromadb==0.5.18
 pypdf==5.1.0
 pymupdf==1.24.11
 
-# Evaluation (The "Assurance" Part)
+# Evaluation & Assurance
 ragas==0.1.21
 datasets==3.1.0
 
-# Interface & Utilities
+# Interface & Data Utils
 streamlit==1.40.1
 python-dotenv==1.0.1
 pandas==2.2.3
